Rest of the stuff

--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About Us</a></li>>
 				          <li><a href="team.html">Team</a></li>		          
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
@@ -127,7 +126,7 @@
 						<div class="banner-content col-lg-9">
 							<h6 class="text-white">Fall 2017 - Spring 2018</h6>
 							<h1 class="text-white">
-								SigSent: An Intelligent, Multimodal Hexapod Robot
+								SigSent: An Intelligent, Multi-Terrain, Hexapod Sentinel
 							</h1>
 							<p class="pt-20 pb-20 text-white">
 								
@@ -140,17 +139,10 @@
 
 			<!-- Start service Area -->
 			<section class="service-area section-gap" id="service">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="menu-content pb-70 col-lg-8">
-							<div class="title text-center">
-								<h1 class="mb-10">What is a SigSent</h1>
-								<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lectus felis, malesuada eu eleifend ut, ullamcorper et eros. Praesent bibendum, leo vitae consequat lacinia, magna diam sollicitudin ligula, sed sodales mauris urna ut felis. Fusce lacinia dolor eu ultrices vulputate. Sed cursus turpis nulla, sed dapibus quam dapibus sed. Morbi eu scelerisque ligula. Nulla eget elit molestie, hendrerit ligula non, gravida urna. Ut sit amet metus felis. Ut sed consequat velit. Donec ornare, erat non pulvinar feugiat, diam tellus congue enim, at tempus nulla neque quis mi. Donec gravida et orci et placerat. Nam eget ante in massa aliquam suscipit in molestie orci.
-								</p>
-							</div>
-						</div>
-					</div>						
+				<div class="container">						
+					<div class="title text-center">
+						<h1 class="mb-10">What is a SigSent</h1>
+					</div>
 					<div class="row">
 						<div class="col-lg-4">
 							<div class="single-service">
@@ -174,6 +166,22 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lectus felis,
 							</div>
 						</div>												
 					</div>
+					<div class="row d-flex justify-content-center">
+							<div class="menu-content pb-70 col-lg-8">
+								<div class="title text-center">
+									<p style="font-size:14px">
+	Security guards routinely work in situations best described by  the  “three  Ds  of  robotics” - dull,  dirty,  and  dangerous.
+	Sentinel robots can multiply the presence of security guards, and by doing so, reduce the costs and risks associated with a conventional 
+	security strategy. With the ability to either walk as a hexapod or skid-steer drive with four wheels, SigSent can traverse across varied terrain 
+	(e.g., sand, grass, etc.). SigSent’s walking  gait  can  be  refined  through  a  genetic  algorithm. SigSent  features  multiple  human-robotic  
+	interaction  capabilities  including  automated  pedestrian  detection,  voice  command, and teleoperation with a joystick controller. SigSent 
+	can also  operate  autonomously  by  following  predefined  surveillance  routines  with  GPS  waypoint  navigation  and  local  pathplanning.  
+	Additionally,  the  appropriate  mode  of  locomotion is  suggested  to  operators  through  terrain  classification  using the  NeuroEvolution  
+	of  Augmenting  Topologies  framework.
+									</p>
+								</div>
+							</div>
+						</div>
 				</div>	
 			</section>
 			<!-- End service Area -->	
@@ -259,44 +267,114 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lectus felis,
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">SigSent's journey</h1>
+								<h1 class="mb-10">SigSent's Journey</h1>
 							</div>
 						</div>
 					</div>					
 					<div class="row">
-						<div class="col-lg-7 col-md-6">
-							<a href="img/g1.jpg" class="single-gallery">
-								<img class="img-fluid" src="img/g1.jpg" alt="">
-							</a>
-						</div>
-						<div class="col-lg-5 col-md-6">
-							<a href="img/g2.jpg" class="single-gallery">
-								<img class="img-fluid" src="img/g2.jpg" alt="">
+						<div class="col-lg-4 col-md-4">
+							<a href="img/sigsent.jpg" class="single-gallery">
+								<img class="img-fluid" src="img/sigsent.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-lg-4 col-md-4">
-							<a href="img/g3.jpg" class="single-gallery">
-								<img class="img-fluid" src="img/g3.jpg" alt="">
+							<a href="img/actionpose.jpg" class="single-gallery">
+								<img class="img-fluid" src="img/actionpose.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-lg-4 col-md-4">
-							<a href="img/g4.jpg" class="single-gallery">
-								<img class="img-fluid" src="img/g4.jpg" alt="">
+							<a href="img/gui_pic.png" class="single-gallery">
+								<img class="img-fluid" src="img/gui_pic.png" alt="">
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/IMG_0285.JPG" class="single-gallery">
+								<img class="img-fluid" src="img/IMG_0285.JPG" alt="">
+							</a>
+						</div>
+						<div class="col-lg-2 col-md-4">
+							<a href="img/IMG_4378.JPG" class="single-gallery">
+								<img class="img-fluid" src="img/IMG_4378.JPG" alt="">
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/IMG_4862.JPG" class="single-gallery">
+								<img class="img-fluid" src="img/IMG_4862.JPG" alt="">
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/IMG_6648.JPG" class="single-gallery">
+								<img class="img-fluid" src="img/IMG_6648.JPG" alt="">
 							</a>
 						</div>	
 						<div class="col-lg-4 col-md-4">
-							<a href="img/g5.jpg" class="single-gallery">
-								<img class="img-fluid" src="img/g5.jpg" alt="">
+							<a href="img/IMG_6961.JPG" class="single-gallery">
+								<img class="img-fluid" src="img/IMG_6961.JPG" alt="">
 							</a>
 						</div>
-						<div class="col-lg-5 col-md-6">
-							<a href="img/g6.jpg" class="single-gallery">
-								<img class="img-fluid" src="img/g6.jpg" alt="">
+						<div class="col-lg-4 col-md-4">
+							<a href="img/PCBs.png" class="single-gallery">
+								<img class="img-fluid" src="img/PCBs.png" alt="">
+							</a>
+						</div>
+						<div class="col-lg-6 col-md-4">
+							<a href="img/SigSent V1 driving.png" class="single-gallery">
+								<img class="img-fluid" src="img/SigSent V1 driving.png" alt="">
 							</a>
 						</div>	
-						<div class="col-lg-7 col-md-6">
-							<a href="img/g7.jpg" class="single-gallery">
-								<img class="img-fluid" src="img/g7.jpg" alt="">
+						<div class="col-lg-6 col-md-4">
+							<a href="img/SigSent V1 walking.png" class="single-gallery">
+								<img class="img-fluid" src="img/SigSent V1 walking.png" alt="">
+							</a>
+						</div>	
+						<div class="col-lg-6 col-md-4">
+							<a href="img/Sigsent V2 driving.png" class="single-gallery">
+								<img class="img-fluid" src="img/Sigsent V2 driving.png" alt="">
+							</a>
+						</div>
+						<div class="col-lg-6 col-md-4">
+							<a href="img/Sigsent V2 walking.png" class="single-gallery">
+								<img class="img-fluid" src="img/Sigsent V2 walking.png" alt="">
+							</a>
+						</div>
+						<div class="col-lg-6 col-md-4">
+							<a href="img/SigSent V2.2 walking.png" class="single-gallery">
+								<img class="img-fluid" src="img/SigSent V2.2 walking.png" alt="">
+							</a>
+						</div>
+						<div class="col-lg-5 col-md-4">
+							<a href="img/Sigsent V3 driving.png" class="single-gallery">
+								<img class="img-fluid" src="img/Sigsent V3 driving.png" alt="">
+							</a>
+						</div>														
+						<div class="col-lg-5 col-md-4">
+							<a href="img/Sigsent V3 walking.png" class="single-gallery">
+								<img class="img-fluid" src="img/Sigsent V3 walking.png" alt="">
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/5T1A3376.jpg" class="single-gallery">
+								<img class="img-fluid" src="img/5T1A3376.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/5T1A3406.jpg" class="single-gallery">
+								<img class="img-fluid" src="img/5T1A3406.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/5T1A3423.jpg" class="single-gallery">
+								<img class="img-fluid" src="img/5T1A3423.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/5T1A3424.jpg" class="single-gallery">
+								<img class="img-fluid" src="img/5T1A3424.jpg" alt="">
+							</a>
+						</div>														
+						<div class="col-lg-4 col-md-4">
+							<a href="img/5T1A3429.jpg" class="single-gallery">
+								<img class="img-fluid" src="img/5T1A3429.jpg" alt="">
 							</a>
 						</div>																				
 					</div>
