--- a/team.html
+++ b/team.html
@@ -39,7 +39,6 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About Us</a></li>>
 				          <li class="menu-active"><a href="team.html">Team</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
@@ -69,264 +68,64 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Experienced Mentor Team</h1>
-								<p>Who are in extremely love with eco friendly system.</p>
+								<h1 class="mb-10">The Team</h1>
+								<p></p>
 							</div>
 						</div>
 					</div>						
 					<div class="row justify-content-center d-flex align-items-center">
 						<div class="col-md-3 single-team">
 						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t1.jpg" alt="">
+						        <img class="img-fluid" src="img/josh.jpeg" alt="">
 						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
+									<a href="https://www.linkedin.com/in/joshualeefranco/"><i class="fa fa-linkedin"></i></a>
 						        </div>
 						    </div>
 						    <div class="meta-text mt-30 text-center">
-							    <h4>Ethel Davis</h4>
-							    <p>Managing Director (Sales)</p>									    	
+							    <h4>Joshua Lee Franco</h4>
+								<p>Mechanical, Electrical, Computer Engineering</p>
 						    </div>
 						</div>
 						<div class="col-md-3 single-team">
 						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t2.jpg" alt="">
+						        <img class="img-fluid" src="img/john.jpeg" alt="">
 						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
+									<a href="https://www.linkedin.com/in/johntmillner/"><i class="fa fa-linkedin"></i></a>
 						        </div>
 						    </div>
 						    <div class="meta-text mt-30 text-center">
-							    <h4>Rodney Cooper</h4>
-							    <p>Creative Art Director (Project)</p>			    	
+							    <h4>John Millner</h4>
+							    <p>Electrical, Computer Engineering</p>			    	
 						    </div>
 						</div>	
 						<div class="col-md-3 single-team">
 						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t3.jpg" alt="">
+						        <img class="img-fluid" src="img/jeff.jpeg" alt="">
 						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
+									<a href="https://www.linkedin.com/in/jeffstrangejr/"><i class="fa fa-linkedin"></i></a>
 						        </div>
 						    </div>
 						    <div class="meta-text mt-30 text-center">
-							    <h4>Dora Walker</h4>
-							    <p>Senior Core Developer</p>			    	
+							    <h4>Jeffrey Strange Jr.</h4>
+							    <p>Electrical Engineering</p>			    	
 						    </div>
 						</div>	
 						<div class="col-md-3 single-team">
 						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t4.jpg" alt="">
+						        <img class="img-fluid" src="img/richie.jpeg" alt="">
 						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
+									<a href="https://www.linkedin.com/in/richard-wales-43297212a/"><i class="fa fa-linkedin"></i></a>
 						        </div>
 						    </div>
 						    <div class="meta-text mt-30 text-center">
-							    <h4>Lena Keller</h4>
-							    <p>Creative Content Developer</p>			    	
+							    <h4>Richie Wales</h4>
+							    <p>Computer Engineering</p>			    	
 						    </div>
-						</div>		
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t1.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Ethel Davis</h4>
-							    <p>Managing Director (Sales)</p>									    	
-						    </div>
-						</div>
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t2.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Rodney Cooper</h4>
-							    <p>Creative Art Director (Project)</p>			    	
-						    </div>
-						</div>	
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t3.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Dora Walker</h4>
-							    <p>Senior Core Developer</p>			    	
-						    </div>
-						</div>	
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t4.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Lena Keller</h4>
-							    <p>Creative Content Developer</p>			    	
-						    </div>
-						</div>		
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t1.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Ethel Davis</h4>
-							    <p>Managing Director (Sales)</p>									    	
-						    </div>
-						</div>
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t2.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Rodney Cooper</h4>
-							    <p>Creative Art Director (Project)</p>			    	
-						    </div>
-						</div>	
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t3.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Dora Walker</h4>
-							    <p>Senior Core Developer</p>			    	
-						    </div>
-						</div>	
-						<div class="col-md-3 single-team">
-						    <div class="thumb">
-						        <img class="img-fluid" src="img/pages/t4.jpg" alt="">
-						        <div class="align-items-center justify-content-center d-flex">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-						        </div>
-						    </div>
-						    <div class="meta-text mt-30 text-center">
-							    <h4>Lena Keller</h4>
-							    <p>Creative Content Developer</p>			    	
-						    </div>
-						</div>																																				
+						</div>																																						
 					</div>
 				</div>	
 			</section>
 			<!-- End team Area -->					
-
-			<!-- Start fact Area -->
-			<section class="facts-area section-gap" id="facts-area">
-				<div class="container">
-					<div class="row">
-						<div class="col single-fact">
-							<h1 class="counter">2536</h1>
-							<p>Projects Completed</p>
-						</div>
-						<div class="col single-fact">
-							<h1 class="counter">6784</h1>
-							<p>Really Happy Clients</p>
-						</div>
-						<div class="col single-fact">
-							<h1 class="counter">1059</h1>
-							<p>Total Tasks Completed</p>
-						</div>
-						<div class="col single-fact">
-							<h1 class="counter">2239</h1>
-							<p>Cups of Coffee Taken</p>
-						</div>	
-						<div class="col single-fact">
-							<h1 class="counter">435</h1>
-							<p>In House Professionals</p>
-						</div>												
-					</div>
-				</div>	
-			</section>
-			<!-- end fact Area -->										
-
-			<!-- start footer Area -->		
-			<footer class="footer-area section-gap">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-5 col-md-6 col-sm-6">
-							<div class="single-footer-widget">
-								<h6>About Us</h6>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
-								</p>
-								<p class="footer-text">
-									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-5  col-md-6 col-sm-6">
-							<div class="single-footer-widget">
-								<h6>Newsletter</h6>
-								<p>Stay update with our latest</p>
-								<div class="" id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-										<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-			                            	<button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
-			                            	<div style="position: absolute; left: -5000px;">
-												<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-											</div>
-
-										<div class="info"></div>
-									</form>
-								</div>
-							</div>
-						</div>						
-						<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-							<div class="single-footer-widget">
-								<h6>Follow Us</h6>
-								<p>Let us be social</p>
-								<div class="footer-social d-flex align-items-center">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
-									<a href="#"><i class="fa fa-behance"></i></a>
-								</div>
-							</div>
-						</div>							
-					</div>
-				</div>
-			</footer>	
-			<!-- End footer Area -->		
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
